--- a/_includes/layouts/reading-list.njk
+++ b/_includes/layouts/reading-list.njk
@@ -2,59 +2,57 @@
 layout: layouts/page.njk
 section: reading-list
 ---
-<p>
-    This is a list of the {{ readingList | length }}
-    {% if readingList | length > 50 %}
-    <a href="https://github.com/edjw/edjw-blog/blob/a528443b33ce24de27097d6f1e9ac74ed817e851/_includes/layouts/reading-list.njk#L7-L11"
-        class="no_text_decoration">(🤦‍♂️‍‍‍‍)</a>
-    {% endif %}
-    links that are currently saved in <a href="https://getpocket.com">my Pocket account</a> that I haven't tagged as
-    'private'. The Pocket article links only work if you've got a Pocket account.
-</p>
+<p>See what I've saved in Pocket, Raindrop, and Feedbin.</p>
+<h3>
+    Latest 3 Pocket articles
+</h3>
 
-<p>
-    I've written up how this website pulls in that data in <a
-        href="/2019/04/26/publishing-my-pocket-reading-list-on-this-website">a blogpost here</a>.
-</p>
+{% for i in range(0, 3) %}
 
-<div class="reading_list">
+    <section {% if loop.first == false %}class="reading_list_item"{% endif %}>
 
-    {% for item in readingList %}
-
-    <section class="reading_list_item">
-
-        <a href="{{ item.resolved_url }}"
-            class="word-wrap-break-word reading_item_title">{{ item.resolved_title if item.resolved_title else item.resolved_url }}</a>
-        {% if item.authors %}
-        by {% for authorID, authorDetails in item.authors %}
-        <em>{{ authorDetails.name | title }}
-        </em>
-        {% endfor %}
-        {% endif %}
-
-        <small class="pocket_link">
-            <a href="https://app.getpocket.com/read/{{ item.item_id }}"
-                aria-label="Read {% if item.resolved_title %} {{ item.resolved_title }} {% else %}article from {{ item.resolved_url | getDomain }}{% endif %} {% if item.authors %} by {% for authorID, authorDetails in item.authors %} {{ authorDetails.name | title }}{% endfor %}{% endif %} on Pocket">
-                Pocket article link
-            </a>
-        </small>
-
-        {% if item.excerpt %}
-        <p class="word-wrap-break-word">
-            <em>Summary: </em>{{ item.excerpt }}</p>
-        {% endif %}
-
-        {% if item.tags %}
-        <small>
-            <i>Tags: </i>
-            {% for tag, tagHash in item.tags %}
-            {{ tag }}
-            {% if loop.revindex > 1 %},{% endif %}
+        <a href="{{ readingList[i].resolved_url }}"
+            class="word-wrap-break-word reading_item_title">{{ readingList[i].resolved_title if readingList[i].resolved_title else readingList[i].resolved_url }}</a>
+        {% if readingList
+        [i].authors %}
+        by {% for authorID, authorDetails in readingList
+            [i].authors %}
+                <em>{{ authorDetails.name | title }}
+                </em>
             {% endfor %}
-        </small>
         {% endif %}
 
     </section>
-    {% endfor %}
+{% endfor %}
+<a href="/pocket-articles" class="see_all">See all Pocket articles</a>
 
-</div>
+<h3>
+    Latest 3 Raindrop links
+</h3>
+
+{% for i in range(0, 3) %}
+    <section {% if loop.first == false %}class="reading_list_item"{% endif %}>
+
+        <a href="{{ raindropLinks[i].url }}" class="word-wrap-break-word reading_item_title">
+            {{ raindropLinks[i].title }}
+        </a>
+
+        <p>{{ raindropLinks[i].excerpt | truncate(150)}}</p>
+
+    </section>
+{% endfor %}
+<a href="/raindrop-links" class="see_all">See all Raindrop links</a>
+
+<h3>
+    Latest 3 Feedbin stars
+</h3>
+
+{% for i in range(0, 3) %}
+    <section {% if loop.first == false %}class="reading_list_item"{% endif %}>
+        <a href="{{ feedbinLikes[i].url }}" class="reading_item_title word-wrap-break-word">
+            {{ feedbinLikes[i].title }}
+        </a>
+        {# <p>{{ feedbinLikes[i].publication }}</p> #}
+    </section>
+{% endfor %}
+<a href="/feedbin-stars" class="see_all">See all Feedbin stars</a>
