--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -56,7 +56,7 @@
   <link href="https://instagram.com/{{ site.author.instagramUsername }}" rel="me">
   {% endif %} #}
 
-  {# <script src="/assets/js/alpine.js" defer></script> #}
+  <script src="/assets/js/alpine.js" defer></script>
 
   {% set css %}
   {% include "../../node_modules/modern-css-reset/dist/reset.min.css" %}
