--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -289,11 +289,7 @@ a {
   padding: 0.0625rem 0.5rem;
 }
 
-.reading_list {
-  border-top: 1px solid var(--color-primary-text);
-}
-
-.reading_list_item:nth-of-type(n + 2) {
+.reading_list_item {
   border-top: 1px solid var(--color-primary-text);
   padding-top: 1rem;
 }
@@ -305,6 +301,16 @@ a {
 .pocket_link {
   display: block;
   margin-top: 0.5rem;
+}
+
+.see_all {
+  display: inline-block;
+  background-color: var(--color-primary);
+  color: var(--color-secondary-text);
+  border-radius: 5px;
+  padding: 0.25rem 1rem;
+  font-size: 80%;
+  margin: 1rem 0 2rem 0;
 }
 
 .toc > ul {
