typo in component name

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -5,5 +5,5 @@ section: home
 {% set postslist = collections.posts | reverse %}
 
 <h2 class="page_title">Latest posts</h2>
-{% include "components/last4Posts.njk" %}
+{% include "components/last4posts.njk" %}
 <a href="/all-posts" class="see_all">See all posts</a>
