--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -4,6 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>{{ title }} - {{ site.title }}</title>
+  <link rel='shortcut icon' type='image/x-icon' href="/favicon.ico"/>
   <meta name="description" content="{{ socialDescription or site.description }}">
 
   {# Twitter metadata #}
