--- a/_includes/layouts/allPosts.njk
+++ b/_includes/layouts/allPosts.njk
@@ -4,6 +4,6 @@ section: home
 ---
 {% set postslist = collections.posts | reverse %}
 
-<h2 class=“page_title”>All posts</h2>
+<h2 class="page_title">All posts</h2>
 
 {% include "components/allPosts.njk" %}
