--- a/_includes/components/nav.njk
+++ b/_includes/components/nav.njk
@@ -1,9 +1,8 @@
 {% if navigation.items %}
 
-  <nav aria-label="primary" x-data="{ navOpen: false }">
-    <button id="nav_toggler" type="button" aria-expanded="false" aria-label="open navigation" @click="navOpen = true" :aria-expanded='navOpen ? true : false' x-text='navOpen ? "Hide menu" : "Menu"'>Menu</button>
+  <nav>
 
-    <ul class="nav_list" x-show="navOpen" @click.away="navOpen = false" x-cloak="mobile">
+    <ul class="nav_list">
       {% for nav in navigation.items %}
         <li class="nav_item">
           <a href="{{ nav.url | url }}">
