--- a/_includes/layouts/reading-list.njk
+++ b/_includes/layouts/reading-list.njk
@@ -3,7 +3,7 @@ layout: layouts/page.njk
 section: reading-list
 ---
 <p>See what I've saved in Pocket, Raindrop, and Feedbin.</p>
-<h3>
+<h3 class="readingListTitle">
     Latest 3 Pocket articles
 </h3>
 
@@ -26,7 +26,7 @@ section: reading-list
 {% endfor %}
 <a href="/pocket-articles" class="see_all">See all Pocket articles</a>
 
-<h3>
+<h3 class="readingListTitle">
     Latest 3 Raindrop links
 </h3>
 
@@ -43,7 +43,7 @@ section: reading-list
 {% endfor %}
 <a href="/raindrop-links" class="see_all">See all Raindrop links</a>
 
-<h3>
+<h3 class="readingListTitle">
     Latest 3 Feedbin stars
 </h3>
 
