--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -5,13 +5,15 @@
 
   <title>{{ title }} - {{ site.title }}</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
+
+  {# <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#ffffff"> #}
 
   <meta name="description" content="{{ socialDescription or site.description }}">
 
@@ -38,24 +40,24 @@
   {# End of Facebook / Open Graph metadata #}
 
   {# Rel links #}
-  {% if site.author.githubUsername %}
+  {# {% if site.author.githubUsername %}
     <link href="https://github.com/{{ site.author.githubUsername }}" rel="me">
-  {% endif %}
+  {% endif %} #}
 
   {# {% if site.author.microblogUsername %}
   <link href="https://micro.blog/{{ site.author.microblogUsername }}" rel="me">
   {% endif %} #}
 
-  {% if site.author.mastodonUsername %}
+  {# {% if site.author.mastodonUsername %}
     <link href="https://mastodon.social/{{ site.author.mastodonUsername }}" rel="me">
-  {% endif %}
+  {% endif %} #}
   {# End of Rel links #}
 
-  {% if site.indieauth == true %}
+  {# {% if site.indieauth == true %}
     <link rel="authorization_endpoint" href="https://indieauth.com/auth">
     <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
-    {# <link rel="microsub" href="https://aperture.p3k.io/microsub/134"> #}
-  {% endif %}
+    <link rel="microsub" href="https://aperture.p3k.io/microsub/134">
+{% endif %} #}
 
   {# {% if site.micropub == true %}
   <link rel="micropub" href="{{ site.url }}/micropub">
