--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,9 @@
-* {
-  /* border: 1px solid black; */
-}
 :root {
   --black: #212121;
   --white: #fdfdfd;
   --grey: #4f5a65;
   --red: #b10a2c;
   --blue: #004777;
-  --blue-grey: #005875;
   --box-shadow-color: hsla(0, 0%, 0%, 0.2);
   --box-shadow-size: 0 4px 6px 0;
 }
@@ -35,7 +31,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   min-height: 100%;
-  color: var(--color-primary-text);
+  color: var(--black);
 }
 
 a {
@@ -119,7 +115,8 @@ main {
   margin: 1rem 0;
 }
 
-main * + * {
+main * + *,
+footer * + * {
   margin-top: 1rem;
 }
 
@@ -128,10 +125,6 @@ main * + * {
   color: var(--white);
   padding: 1rem;
   margin: 0 -1rem;
-}
-
-.siteIntro > *:nth-child(n + 2) {
-  margin-top: 1rem;
 }
 
 .page_title,
@@ -172,7 +165,7 @@ main * + * {
   color: var(--white);
   border-radius: 5px;
   padding: 0.25rem 1rem;
-  font-size: 80%;
+  font-size: 16px;
   margin: 2rem 0;
   text-decoration: none;
 }
@@ -182,10 +175,6 @@ footer {
   padding: 1rem;
   margin-top: 0;
   color: var(--white);
-}
-
-footer > *:nth-child(n + 2) {
-  margin-top: 1rem;
 }
 
 footer li a,
@@ -252,6 +241,12 @@ footer a {
 .blogpost h3 + *,
 .blogpost h4 + * {
   margin-top: 0.25rem;
+}
+
+.blogpost h2,
+.blogpost h3,
+.blogpost h4 {
+  color: var(--blue);
 }
 
 .toc > ul {
