explaining the licence

--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -35,9 +35,9 @@
   {% if site.contentLicence %}
 
     <p>
-        Content on this website is licenced under a
+        You can copy, adapt, and redistribute any content on this site for any purpose. If you do, give credit, provide a link to the licence, and indicate if you made changes. Content on this website is licenced under a
         <a href="{{ site.contentLicence.link }}">{{ site.contentLicence.text }}</a>.
-      </p>
+    </p>
 
   {% endif %}
 
