adding tags and tag pages

--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 section: page
 ---
-<article class="section">
+<article class="page">
     <h2 class="page_title">{{ title }}</h2>
     {{ content | safe }}
 </article>
