--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -28,14 +28,14 @@
     {% endif %}
   </ul>
 
-  {% if site.author.mastodonUsername %}
+  {# {% if site.author.mastodonUsername %}
     <link rel="me" href="https://mastodon.social/{{ site.author.mastodonUsername}}">
-  {% endif %}
+  {% endif %} #}
 
   {% if site.contentLicence %}
 
     <p>
-        You can copy, adapt, and redistribute any content on this site for any purpose. If you do, give credit, provide a link to the licence, and indicate if you made changes. Content on this website is licenced under a
+        You can copy, adapt, and redistribute any content on this site for any purpose. If you do, please give credit, provide a link to the licence, and indicate if you made changes. Content on this website is licenced under a
         <a href="{{ site.contentLicence.link }}">{{ site.contentLicence.text }}</a>.
     </p>
 
