--- a/tags.njk
+++ b/tags.njk
@@ -3,6 +3,12 @@ pagination:
   data: collections
   size: 1
   alias: tag
+  filter:
+    - all
+    - nav
+    - post
+    - posts
+    - tagList
 permalink: /tags/{{ tag }}/
 layout: "layouts/page.njk"
 ---
