--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -30,6 +30,7 @@ section: post
                         /
                     {% endif %}
                 {% endfor %}
+                {% endif %}
 
             </p>
         {% endif %}
