--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -1,6 +1,11 @@
 <header>
     <h1 class="site_title">
-        <a class="h-card" rel="me" href="/">{{ site.title }}</a>
+        <a class="h-card" rel="me" href="/" 
+        {% if page.url == "/" %}
+            aria-current="page"
+        {% endif %}>
+            {{ site.title }}
+        </a>
     </h1>
 
     {% include "components/nav.njk" %}
