--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,12 @@ pre {
   overflow: auto;
 }
 
+blockquote {
+  border-left: 5px solid var(--blue);
+  padding: 0.5rem 0 0.5rem 1rem;
+  margin: 1.5rem 0;
+}
+
 .word-wrap-break-word,
 .footnote-item a {
   overflow-wrap: break-word;
