--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,11 +2,11 @@
 layout: layouts/base.njk
 section: home
 ---
-<section class="leading-loose">
+<section class="">
     <p>
         My personal site
     </p>
-    <p>
+    <p class="mt-2">
         Some tech, some politics, some shapenote music
     </p>
 </section>
