couple of style changes

--- a/src/_includes/components/allPosts.njk
+++ b/src/_includes/components/allPosts.njk
@@ -1,5 +1,5 @@
 <div class="mt-8 prose">
-	<h2 class="">All blogposts</h2>
+	<h2 class="-mb-4">All blogposts</h2>
 	{% set year = "" %}
 	{% for post in postslist %}
 		{% set postYear = post.date | getYear %}
