--- a/src/_includes/components/last4posts.njk
+++ b/src/_includes/components/last4posts.njk
@@ -1,5 +1,5 @@
 <div class="mt-8 prose">
-	<h2 class="">Latest posts</h2>
+	<h2 class="-mb-4">Latest posts</h2>
 
 	{% set year = "" %}
 	{% for i in range(0, 4) %}
