fixing tags link; ensuring decent font size

--- a/src/_includes/components/last4posts.njk
+++ b/src/_includes/components/last4posts.njk
@@ -10,5 +10,7 @@
 			</h3>
 		</section>
 	{% endfor %}
-	<a href="/all-posts" class="">See all posts</a>
+	<p class="text-base">
+		<a href="/all-posts" class="">See all posts</a>
+	</p>
 </div>
