--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -4,5 +4,7 @@ section: page
 ---
 <article class="prose">
     <h2 class="">{{ title }}</h2>
-    {{ content | safe }}
+    <div class="text-base">
+        {{ content | safe }}
+    </div>
 </article>
