--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -36,7 +36,7 @@ section: post
             {% endif%}
 
         </section>
-        <div class="e-content {{ section }}">
+        <div class="text-base e-content">
             {{ content | safe }}
         </div>
 
