--- a/src/_includes/components/nav.njk
+++ b/src/_includes/components/nav.njk
@@ -1,6 +1,6 @@
 {% if navigation.items %}
 
-  <nav class="">
+  <nav class="text-base">
 
     <ul class="grid grid-cols-3 gap-4 my-8 list-none sm:w-2/4">
       {% for nav in navigation.items %}
