--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 section: home
 ---
-<section class="">
+<section class="text-base">
     <p>
         My personal site
     </p>
