--- a/src/pages/tags.njk
+++ b/src/pages/tags.njk
@@ -7,7 +7,7 @@ pagination:
     - all
     - post
     - posts
-permalink: /tags/{{ tag }}/
+permalink: /tags/{{ tag | slug }}/
 layout: layouts/page.njk
 ---
 
