fixing pocket link

--- a/src/_includes/layouts/reading-list.njk
+++ b/src/_includes/layouts/reading-list.njk
@@ -29,7 +29,7 @@ section: reading-list
 {% endfor %}
 
 <p>
-    <a href="/raindrop-articles" class="font-semibold">See all Pocket links</a>
+    <a href="/pocket-articles" class="font-semibold">See all Pocket links</a>
 </p>
 
 <h3 class="mt-8">
