--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -1,6 +1,6 @@
 <header class="">
     <h1 class="text-4xl">
-        <a class="h-card" rel="me" href="/"
+        <a class="text-4xl h-card" rel="me" href="/"
         {% if page.url == "/" %}
             aria-current="page"
         {% endif %}>
