--- a/src/_includes/components/nav.njk
+++ b/src/_includes/components/nav.njk
@@ -1,18 +1,18 @@
 {% if navigation.items %}
 
-  <nav class="text-base">
+    <nav class="">
 
-    <ul class="grid grid-cols-3 gap-4 my-8 list-none sm:w-2/4">
-      {% for nav in navigation.items %}
-        <li class="{% if section == nav.section %} currentPage
+        <ul class="grid grid-cols-3 gap-4 my-8 list-none sm:w-2/4">
+            {% for nav in navigation.items %}
+                <li class="{% if section == nav.section %} currentPage
            {% endif %}">
-          <a href="{{ nav.url | url }}" {% if section == nav.section %} aria-current="page"{% endif %}>
-            {{ nav.text }}
-          </a>
-        </li>
-      {% endfor %}
+                    <a href="{{ nav.url | url }}" {% if section == nav.section %} aria-current="page"{% endif %}>
+                        {{ nav.text }}
+                    </a>
+                </li>
+            {% endfor %}
 
-    </ul>
-  </nav>
+        </ul>
+    </nav>
 
-  {% endif%}
+    {% endif%}
