--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 section: home
 ---
-<section class="text-base">
+<section class="">
     <p>
         My personal site
     </p>
