--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -4,7 +4,7 @@ section: page
 ---
 <article class="prose">
     <h2 class="">{{ title }}</h2>
-    <div class="text-base">
+    <div class="">
         {{ content | safe }}
     </div>
 </article>
