--- a/src/_includes/components/footer.njk
+++ b/src/_includes/components/footer.njk
@@ -34,9 +34,9 @@
 
     {% if site.contentLicence %}
 
-        <p class="mt-6 prose">
-        You can copy, adapt, and redistribute any content on this site for any purpose. If you do, please give credit, provide a link to the licence, and indicate if you made changes. Content on this website is licenced under a
-        <a href="{{ site.contentLicence.link }}">{{ site.contentLicence.text }}</a>.
+        <p class="mt-6 prose text-sm">
+        Content on this website is licenced as
+        <a href=“{{ site.contentLicence.link }}”>{{ site.contentLicence.text }}</a>. That means you can copy, adapt, and redistribute any content on this site for any purpose providing you give credit, provide a link to the licence, and indicate if you made changes.
     </p>
 
     {% endif %}
