renaming components to partials, fixing the nav up a bit

--- a/src/_includes/layouts/allPosts.njk
+++ b/src/_includes/layouts/allPosts.njk
@@ -4,4 +4,4 @@ section: home
 ---
 {% set postslist = collections.posts | reverse %}
 
-{% include "components/allPosts.njk" %}
+{% include "partials/allPosts.njk" %}
