--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -12,4 +12,4 @@ section: home
 </section>
 
 {% set postslist = collections.posts | reverse %}
-{% include "components/last4posts.njk" %}
+{% include "partials/last4posts.njk" %}
