--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="mt-16  border-t-8">
+<footer class="mt-16 border-t-8">
 
     <ul class="leading-loose list-none">
 
@@ -34,9 +34,9 @@
 
     {% if site.contentLicence %}
 
-        <p class="mt-6 prose text-sm">
+        <p class="mt-6 text-sm prose">
         Content on this website is licenced as
-        <a href=“{{ site.contentLicence.link }}”>{{ site.contentLicence.text }}</a>. That means you can copy, adapt, and redistribute any content on this site for any purpose providing you give credit, provide a link to the licence, and indicate if you made changes.
+        <a href="{{ site.contentLicence.link }}" class="text-sm">{{ site.contentLicence.text }}</a>. That means you can copy, adapt, and redistribute any content on this site for any purpose providing you give credit, provide a link to the licence, and indicate if you made changes.
     </p>
 
     {% endif %}
