--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -7,5 +7,5 @@
             {{ site.title }}
         </a>
     </h1>
-    {% include "components/nav.njk" %}
+    {% include "partials/nav.njk" %}
 </header>
