--- a/src/_includes/partials/nav.njk
+++ b/src/_includes/partials/nav.njk
@@ -2,7 +2,7 @@
 
     <nav class="">
 
-        <ul class="grid grid-cols-3 gap-4 my-8 list-none sm:w-2/4">
+        <ul class="grid grid-cols-3 my-8 list-none gap-y-4 sm:w-2/4">
             {% for nav in navigation.items %}
                 <li class="{% if section == nav.section %} currentPage
            {% endif %}">
