--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-	{% include "components/head.njk" %}
+    {% include "partials/head.njk" %}
 
-	<body class="container grid h-screen max-w-4xl px-4 pt-4 mx-auto grid-cols-full grid-rows-auto-1-auto">
-		{% include "components/header.njk" %}
+    <body class="container grid h-screen max-w-4xl px-4 pt-4 mx-auto grid-cols-full grid-rows-auto-1-auto">
+        {% include "partials/header.njk" %}
 
-		<main class="">
-			{{ content | safe }}
-		</main>
+        <main class="">
+            {{ content | safe }}
+        </main>
 
-		{% include "components/footer.njk" %}
+        {% include "partials/footer.njk" %}
 
-		{# {% set js %}
+        {# {% set js %}
 		{% include "../../assets/js/main.js" %}
 		{% endset %}
 
@@ -20,6 +20,6 @@
 
 			{{ js | jsmin | safe }}
 		</script> #}
-	</body>
+    </body>
 
 </html>
